[gd_scene load_steps=6 format=3 uid="uid://dwslltnvmerrq"]

[ext_resource type="Script" uid="uid://dsdw1682571ug" path="res://scripts/bet_zone.gd" id="1_wwqtj"]
[ext_resource type="Theme" uid="uid://774qwrnpcvo5" path="res://scenes/text_theme.tres" id="2_1vpie"]
[ext_resource type="Theme" uid="uid://bcnt4107hclm1" path="res://arrow.tres" id="2_f41xx"]
[ext_resource type="Texture2D" uid="uid://cfhwnrh5ibjog" path="res://assets/svg/up-arrrow.svg" id="3_f41xx"]
[ext_resource type="Texture2D" uid="uid://rlskhqac5mme" path="res://assets/svg/down-arrrow.svg" id="3_ia1iq"]

[node name="BetZone" type="Node2D"]
script = ExtResource("1_wwqtj")

[node name="BackDrop" type="ColorRect" parent="."]
offset_right = 267.0
offset_bottom = 120.0
color = Color(0.21, 0.21, 0.21, 0.517647)

[node name="Down" type="Button" parent="."]
offset_left = 178.0
offset_top = 63.0
offset_right = 257.0
offset_bottom = 116.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_f41xx")
icon = ExtResource("3_ia1iq")

[node name="Up" type="Button" parent="."]
offset_left = 178.0
offset_top = 3.0
offset_right = 257.0
offset_bottom = 56.0
mouse_default_cursor_shape = 2
theme = ExtResource("2_f41xx")
icon = ExtResource("3_f41xx")

[node name="Dollar" type="RichTextLabel" parent="."]
offset_left = 2.0
offset_top = 61.0
offset_right = 33.0
offset_bottom = 113.0
theme = ExtResource("2_1vpie")
text = "$
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="RichTextLabel" parent="."]
offset_left = 30.0
offset_top = 5.0
offset_right = 171.0
offset_bottom = 57.0
theme = ExtResource("2_1vpie")
text = "Label"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BetText" type="TextEdit" parent="."]
offset_left = 35.0
offset_top = 65.0
offset_right = 167.0
offset_bottom = 115.0
theme = ExtResource("2_1vpie")
editable = false

[connection signal="pressed" from="Down" to="." method="decrease_bet"]
[connection signal="pressed" from="Up" to="." method="increase_bet"]
[connection signal="text_changed" from="BetText" to="." method="_on_bet_text_text_changed"]
